# hfdl-autopilot

./: .gitignore  Cargo.toml  README.md  args.rs  config.rs
.github/workflows/: rust.yml
src/: args.rs  config.rs  hfdl.rs  http.rs  main.rs  state.rs  utils.rs
src/autopilot/: mod.rs  settings.rs  state.rs
src/chooser/: mod.rs  rotate.rs  schedule.rs  single.rs  tracker.rs
src/utils/: airframes.rs  arguments.rs  mod.rs  systable.rs
testing/: dumphfdl  ship.py  systable.json
tools/: convert_table.py  convert_table.sh  requirements.txt
