[package]
name = "hfdl-autopilot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
elasticsearch = "8.5.0-alpha.1"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
stderrlog = "0.5.4"
tempfile = "3.3.0"
url = "2.3.1"
