[package]
name = "hfdl-autopilot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
clap = { version = "4.1.6", features = ["derive"] }
dashmap = { version = "5.4.0", features = ["serde"] }
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
stderrlog = "0.5.4"
tempfile = "3.3.0"
tokio = { version = "1.25.0", features = ["process", "macros", "rt-multi-thread"] }
