[package]
name = "hfdl-autopilot"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
clap = { version = "4.2.2", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.3"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
stderrlog = "0.5.4"
tokio = { version = "1.27.0", features = ["process", "macros", "rt-multi-thread", "time"] }
url = "2.3.1"
